# c_vcpkg_cmake

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
GRPCClient/: CMakeLists.txt  GreeterClient.h  Main.cpp  Main.h
GRPCTINKER/: CMakeLists.txt  GRPCTINKER.cpp
